vlib/v/checker/tests/for_in_invalid_identifier.vv
fn main() {
	for index, mut value in s.statements {
		println('Hello $index $value')
	}
}
